@@ -11,7 +11,7 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -27,28 +27,24 @@ public class FileSystemStorageService implements StorageService {
     private final String datastore;
 
     public FileSystemStorageService(
-            @Value("${upload.simple.datastore}") String datastore
-            ) {
+        @Value("${upload.simple.datastore}") String datastore
+    ) {
         this.datastore = datastore;
         log.info("Creating {}", this);
-            }
+    }
 
     @Override
     @SneakyThrows
-    public void store(String id, MultipartFile file) {
+    public void store(String id, MultipartFile file, String filename) {
         try {
-            log.info("Storing {}/{}/{}", datastore, id, file.getOriginalFilename());
-            if (directoryDoesNotExist(id)) {
-                Files.createDirectory(Paths.get(datastore, id));
+            val path = Path.of(datastore, id, filename);
+            log.info("Storing {}", path);
+            Files.createDirectories(path.getParent());
+            if (Files.exists(path)) {
+                throw new FileExistsException(id, filename);
             }
-
-            val uploadFile = Paths.get(datastore, id, file.getOriginalFilename());
-            if (Files.exists(uploadFile)) {
-                throw new FileExitsException(id, file.getOriginalFilename());
-            }
-
-            file.transferTo(uploadFile.toFile());
-        } catch (FileExitsException ex) {
+            file.transferTo(path.toFile());
+        } catch (FileExistsException ex) {
             throw ex;
         } catch (Exception ex) {
             throw new StorageServiceException(id, ex.getMessage(), ex);
@@ -60,15 +56,19 @@ public class FileSystemStorageService implements StorageService {
     public List<FileInfo> filenames(String id) {
         try {
             log.info("In {} loading all files", id);
-            if (directoryDoesNotExist(id)) {
+            val dir = Path.of(datastore, id);
+            if (!Files.isDirectory(dir)) {
                 throw new UserInputException(id, "Could not retrieve files");
             }
-            val directory = Paths.get(datastore, id).toFile();
-            val filenames = Optional.ofNullable(directory.list()).orElse(new String[0]);
-            return Arrays.stream(filenames)
-                .sorted()
-                .map(FileInfo::new)
-                .collect(Collectors.toList());
+            try (val paths = Files.walk(dir, Integer.MAX_VALUE)) {
+                return paths
+                    .filter(Files::isRegularFile)
+                    .map(dir::relativize)
+                    .map(Path::toString)
+                    .sorted()
+                    .map(FileInfo::new)
+                    .toList();
+            }
         } catch (UserInputException ex) {
             throw ex;
         } catch (Exception ex) {
@@ -81,18 +81,12 @@ public class FileSystemStorageService implements StorageService {
     public void delete(String id, String filename) {
         try {
             log.info("In {} deleting {}", id, filename);
-            val deleteFile = Paths.get(datastore, id, filename);
+            val deleteFile = Path.of(datastore, id, filename);
             Files.delete(deleteFile);
         } catch (NoSuchFileException ex) {
             throw new UserInputException(id, format("File not found %s", filename));
-        }
-        catch (Exception ex) {
+        } catch (Exception ex) {
             throw new StorageServiceException(id, ex.getMessage(), ex);
         }
-    }
-
-    private boolean directoryDoesNotExist(String id) {
-        val directory = Paths.get(datastore, id);
-        return !Files.exists(directory);
     }
 }
